--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "isomorphic-style-loader": "1.0.0",
     "jsonwebtoken": "7.1.9",
     "markdown-it": "8.0.1",
+    "material-ui": "^0.16.1",
+    "mobx": "^2.6.1",
+    "mobx-react": "^3.5.8",
     "node-fetch": "1.6.3",
     "normalize.css": "5.0.0",
     "passport": "0.3.2",
@@ -32,6 +35,7 @@
     "query-string": "4.2.3",
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-tap-event-plugin": "^1.0.0",
     "sequelize": "3.24.5",
     "source-map-support": "0.4.5",
     "sqlite3": "3.1.6",
