--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "query-string": "4.2.3",
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-flexbox-grid": "^0.10.2",
     "react-tap-event-plugin": "^1.0.0",
     "sequelize": "3.24.5",
     "source-map-support": "0.4.5",
