--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "npm": ">=3.10"
   },
   "dependencies": {
+    "Promise": "^1.0.5",
+    "apollo-client": "^0.5.0",
     "babel-polyfill": "6.16.0",
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.6",
@@ -12,6 +14,7 @@
     "classnames": "2.2.5",
     "cookie-parser": "1.4.3",
     "core-js": "2.4.1",
+    "cors": "^2.8.1",
     "express": "4.14.0",
     "express-graphql": "0.5.4",
     "express-jwt": "5.1.0",
@@ -20,6 +23,7 @@
     "front-matter": "2.1.0",
     "graphiql": "0.7.8",
     "graphql": "0.7.2",
+    "graphql-tag": "^0.1.16",
     "history": "4.3.0",
     "isomorphic-style-loader": "1.0.0",
     "jsonwebtoken": "7.1.9",
@@ -34,6 +38,8 @@
     "pretty-error": "2.0.2",
     "query-string": "4.2.3",
     "react": "15.3.2",
+    "react-apollo": "^0.5.16",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "15.3.2",
     "react-flexbox-grid": "^0.10.2",
     "react-tap-event-plugin": "^1.0.0",
@@ -41,6 +47,7 @@
     "source-map-support": "0.4.5",
     "sqlite3": "3.1.6",
     "tedious": "^1.14.0",
+    "typescript": "^2.0.7",
     "universal-router": "2.0.0",
     "whatwg-fetch": "1.0.0"
   },
@@ -105,8 +112,11 @@
     "redbox-react": "^1.3.2",
     "rimraf": "^2.5.4",
     "sinon": "^2.0.0-pre.3",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
     "stylelint-config-standard": "^13.0.2",
+    "ts-loader": "^1.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-hot-middleware": "^2.13.0",
