--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-jwt": "5.1.0",
     "fastclick": "1.0.6",
     "fbjs": "0.8.5",
+    "formsy-material-ui": "^0.5.2",
+    "formsy-react": "^0.18.1",
     "front-matter": "2.1.0",
     "graphiql": "0.7.8",
     "graphql": "0.7.2",
