--- a/package.json
+++ b/package.json
@@ -47,13 +47,15 @@
     "react-dom": "15.3.2",
     "react-flexbox-grid": "^0.10.2",
     "react-tap-event-plugin": "^1.0.0",
+    "rss": "^1.2.1",
     "sequelize": "3.24.5",
     "source-map-support": "0.4.5",
     "sqlite3": "3.1.6",
     "tedious": "^1.14.0",
     "typescript": "^2.0.7",
     "universal-router": "2.0.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
